upgrade to tomcat 9 and Java 10