@@ -33,12 +33,10 @@ if test "$ACTIVEMQ_MODE" = "external"; then
     export JENTRATA_ACTIVEMQ_CONNECTIONFACTORYURL="$ACTIVEMQ_URL"
 fi
 
-export JAVA_OPTS="$JAVA_OPTS -Dcorvus.home=$JENTRATA_HOME"
+export JAVA_OPTS="$JAVA_OPTS --add-modules java.xml.ws -Dcorvus.home=$JENTRATA_HOME -javaagent:/opt/jolokia/jolokia-jvm.jar=host=0.0.0.0"
 
 echo waiting for postgres
 /opt/wait-for-it.sh "$DB_HOST_NAME:5432"
-echo waiting for activemq
-/opt/wait-for-it.sh "$ACTIVEMQ_HOST_NAME:61616"
 
 CMD="run"
 if test "$JENTRATA_DEBUG" = "true"; then
